--- a/style.css
+++ b/style.css
@@ -60,6 +60,36 @@ body {
   border-radius: 25px;
 }
 
+.content-2 {
+  display: flex;
+  flex-direction: column;
+  row-gap: 40px;
+  padding: 451px 0 257px;
+  position: relative;
+}
+.content-2 .content {
+  display: flex;
+  flex-direction: column;
+  row-gap: 40px;
+}
+.content-2 .content p.description {
+  color: #fff;
+  font-size: 20px;
+  margin: 0;
+  line-height: 36px;
+  max-width: 1040px;
+}
+.content-2 .content h2 {
+  margin: 0;
+  line-height: 85px;
+  font-size: 60px;
+}
+.content-2 img.lines-1 {
+  position: absolute;
+  bottom: 0;
+  z-index: -1;
+}
+
 @media (max-width: 999px) {
   .content .logo-wrap img.circle {
     top: -520px;
