--- a/style.css
+++ b/style.css
@@ -72,8 +72,12 @@ body {
   display: flex;
   flex-direction: column;
   row-gap: 40px;
-  padding: 451px 0 257px;
+  padding: 451px 0 12.5rem;
   position: relative;
+  background-image: url(/assets/line-1.svg);
+  background-repeat: no-repeat;
+  background-size: 2346px;
+  background-position: bottom;
 }
 .content-2 .content {
   display: flex;
@@ -99,6 +103,9 @@ body {
   z-index: -1;
 }
 
+.content-3 {
+  margin-top: 4.687rem;
+}
 .content-3 .content {
   display: flex;
 }
@@ -121,7 +128,7 @@ body {
   display: block;
   height: 153px;
   width: 1px;
-  background-color: gray;
+  background-color: #4f4f4f;
   position: relative;
   left: 15px;
   margin: 1rem 0;
@@ -129,7 +136,7 @@ body {
 .content-3 .content .service-list::before {
   content: "";
   height: 1px;
-  background-color: gray;
+  background-color: #4f4f4f;
   position: absolute;
   top: 1.687rem;
   width: 93%;
@@ -151,7 +158,7 @@ body {
   row-gap: 20px;
   justify-content: space-between;
   padding: 2rem 0;
-  transition: box-shadow 1s;
+  transition: box-shadow 0.1s;
 }
 .content-3 .content .service-list .service-item .service-img {
   max-height: 70px;
@@ -163,6 +170,41 @@ body {
 }
 .content-3 .content .service-list .service-item:hover {
   box-shadow: 0 0 3px #bffff6;
+}
+
+.content-4 {
+  padding-top: 21.937rem;
+  background-image: url(/assets/line-2.svg);
+  background-repeat: no-repeat;
+  background-size: 2346px;
+  background-position: top;
+}
+.content-4 h3 {
+  font-size: 2.5rem;
+  letter-spacing: 3px;
+  margin-bottom: 5rem;
+}
+.content-4 h4.paragraph-header {
+  font-size: 1.562rem;
+  letter-spacing: 3px;
+  margin-top: 4.687rem;
+  margin-bottom: 2.812rem;
+}
+.content-4 .spacing {
+  display: flex;
+  flex-direction: column;
+  row-gap: 2.812rem;
+}
+.content-4 .spacing p.text {
+  font-size: 1.25rem;
+  color: #fff;
+  line-height: 40px;
+  margin: 0;
+}
+.content-4 h2 {
+  font-size: 2.95rem;
+  margin-top: 2.687rem;
+  margin-bottom: 0;
 }
 
 @media (max-width: 999px) {
