--- a/style.scss
+++ b/style.scss
@@ -84,13 +84,12 @@ body {
    display: flex;
    flex-direction: column;
    row-gap: 40px;
-   padding: 451px 0 257px;
+   padding: 451px 0 12.5rem;
    position: relative;
-   // background-image: url("/assets/line-1.svg");
-   // background-repeat: no-repeat;
-   // background-attachment: local;
-   // background-size: 100% 100%;
-   // background-position: center 100px;
+   background-image: url(/assets/line-1.svg);
+   background-repeat: no-repeat;
+   background-size: 2346px;
+   background-position: bottom;
 
    .content {
       display: flex;
@@ -121,6 +120,8 @@ body {
 }
 
 .content-3 {
+   margin-top: 4.687rem;
+
    .content {
       display: flex;
 
@@ -145,7 +146,7 @@ body {
             display: block;
             height: 153px;
             width: 1px;
-            background-color: gray;
+            background-color: #4f4f4f;
             position: relative;
             left: 15px;
             margin: 1rem 0;
@@ -155,7 +156,7 @@ body {
       .service-list::before {
          content: "";
          height: 1px;
-         background-color: gray;
+         background-color: #4f4f4f;
          position: absolute;
          top: 1.687rem;
          width: 93%;
@@ -178,7 +179,7 @@ body {
             row-gap: 20px;
             justify-content: space-between;
             padding: 2rem 0;
-            transition: box-shadow 1s;
+            transition: box-shadow 0.1s;
 
             .service-img {
                max-height: 70px;
@@ -195,6 +196,46 @@ body {
             box-shadow: 0 0 3px #bffff6;
          }
       }
+   }
+}
+
+.content-4 {
+   padding-top: 21.937rem;
+   background-image: url(/assets/line-2.svg);
+   background-repeat: no-repeat;
+   background-size: 2346px;
+   background-position: top;
+
+   h3 {
+      font-size: 2.5rem;
+      letter-spacing: 3px;
+      margin-bottom: 5rem;
+   }
+
+   h4.paragraph-header {
+      font-size: 1.562rem;
+      letter-spacing: 3px;
+      margin-top: 4.687rem;
+      margin-bottom: 2.812rem;
+   }
+
+   .spacing {
+      display: flex;
+      flex-direction: column;
+      row-gap: 2.812rem;
+
+      p.text {
+         font-size: 1.25rem;
+         color: #fff;
+         line-height: 40px;
+         margin: 0;
+      }
+   }
+
+   h2 {
+      font-size: 2.95rem;
+      margin-top: 2.687rem;
+      margin-bottom: 0;
    }
 }
 
