--- a/style.scss
+++ b/style.scss
@@ -29,6 +29,25 @@
    src: url("/fonts/Cocogoose-Pro-Ultralight-trial.ttf") format("truetype");
 }
 
+$background-lines-width: 1690px;
+$straight-line-color-1: #646464;
+$straight-line-color-2: #797979;
+$text-s: 1.05rem;
+$text-m: 1.425rem;
+$header-s: 1.17rem;
+$header-m: 2rem;
+$header-l: 3rem;
+
+.purple-btn {
+   color: #fff;
+   text-decoration: none;
+   font-size: 0.925rem;
+   background-color: #6254ff;
+   padding: 0.777em 3.388em;
+   border-radius: 25px;
+   display: inline-block;
+}
+
 body {
    background-color: #213b41;
    color: #bffff6;
@@ -38,8 +57,6 @@ body {
 }
 
 header {
-   // height: 100vh;
-
    .content {
       height: 100%;
       display: flex;
@@ -52,7 +69,7 @@ header {
 .content {
    max-width: 1280px;
    margin-inline: auto;
-   padding: 0 7.5rem;
+   padding: 0 0 0 7.5rem;
 
    .logo-wrap {
       position: relative;
@@ -68,8 +85,6 @@ header {
       }
 
       #text-logo {
-         // margin-top: 144px;
-         // margin-bottom: 6.25rem;
          max-width: 330px;
       }
    }
@@ -92,17 +107,7 @@ header {
             margin: 34px 0;
             text-align: center;
             color: #fff;
-            font-size: 1.425rem;
-         }
-
-         a {
-            color: #fff;
-            text-decoration: none;
-            font-size: 0.925rem;
-            background-color: #6254ff;
-            padding: 0.777em 3.388em;
-            border-radius: 25px;
-            display: inline-block;
+            font-size: $text-m;
          }
       }
    }
@@ -112,22 +117,22 @@ header {
    display: flex;
    flex-direction: column;
    row-gap: 40px;
-   padding: 451px 0 12.5rem;
+   padding: 25rem 0 8.5rem;
    position: relative;
    background-image: url(/assets/line-1.svg);
    background-repeat: no-repeat;
-   background-size: 1690px;
+   background-size: $background-lines-width;
    background-position: bottom;
 
    .content {
       display: flex;
       flex-direction: column;
-      row-gap: 40px;
+      row-gap: 1.875rem;
       width: 100%;
 
       p.description {
          color: #fff;
-         font-size: 1.05rem;
+         font-size: $text-s;
          margin: 0;
          line-height: 2.25rem;
          max-width: 640px;
@@ -135,8 +140,8 @@ header {
 
       h2 {
          margin: 0;
-         line-height: 5.312rem;
-         font-size: 3.75rem;
+         line-height: 3.812rem;
+         font-size: $header-l;
          font-family: Cocogoose;
          font-weight: 100;
       }
@@ -151,12 +156,13 @@ header {
 
 .content-3 {
    margin-top: 4.687rem;
+   margin-bottom: 4rem;
 
    .content {
       display: flex;
 
       .service-text {
-         width: 23%;
+         width: 20%;
 
          h3 {
             margin: 0;
@@ -165,8 +171,8 @@ header {
          }
 
          h3.main {
-            font-family: LemonMilkLight;
-            font-size: 40px;
+            font-family: LemonMilk;
+            font-size: $header-m;
          }
 
          h3.main::after,
@@ -174,31 +180,32 @@ header {
          h3.lower:nth-of-type(3)::after {
             content: "";
             display: block;
-            height: 153px;
+            height: 120px;
             width: 1px;
-            background-color: #4f4f4f;
+            background-color: $straight-line-color-1;
             position: relative;
             left: 15px;
-            margin: 1rem 0;
+            margin: 1.5rem 0;
          }
       }
 
       .service-list::before {
          content: "";
          height: 1px;
-         background-color: #4f4f4f;
+         background-color: $straight-line-color-2;
          position: absolute;
-         top: 1.687rem;
-         width: 93%;
+         top: 1.387rem;
+         width: 95%;
       }
 
       .service-list {
          position: relative;
-         width: 77%;
+         width: 80%;
          display: grid;
-         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-         gap: 3rem;
-         padding-top: 11.25rem;
+         grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+         row-gap: 1.5rem;
+         column-gap: 5rem;
+         padding-top: 9.25rem;
 
          .service-item {
             text-decoration: none;
@@ -230,23 +237,25 @@ header {
 }
 
 .content-4 {
-   padding-top: 21.937rem;
+   padding-top: 15rem;
    background-image: url(/assets/line-2.svg);
    background-repeat: no-repeat;
-   background-size: 2346px;
+   background-size: $background-lines-width;
    background-position: top;
 
    h3 {
-      font-size: 2.5rem;
+      font-size: $header-m;
       letter-spacing: 3px;
-      margin-bottom: 5rem;
+      margin-bottom: 3.5rem;
+      font-family: "LemonMilk";
    }
 
    h4.paragraph-header {
-      font-size: 1.562rem;
+      font-size: $header-s;
       letter-spacing: 3px;
       margin-top: 4.687rem;
-      margin-bottom: 2.812rem;
+      margin-bottom: 1.8rem;
+      font-family: "LemonMilk";
    }
 
    .spacing {
@@ -256,25 +265,27 @@ header {
    }
 
    p.text {
-      font-size: 1.25rem;
+      font-size: $text-s;
       color: #fff;
-      line-height: 40px;
+      line-height: 2.25rem;
       margin: 0;
-      max-width: 1085px;
+      max-width: 985px;
    }
 
    h2 {
       font-size: 2.95rem;
       margin-top: 2.687rem;
       margin-bottom: 0;
+      font-family: "Cocogoose";
+      font-weight: 100;
    }
 }
 
 .content-5 {
-   padding-top: 40.812rem;
+   padding-top: 29rem;
    background-image: url(/assets/line-3.svg);
    background-repeat: no-repeat;
-   background-size: 2346px;
+   background-size: $background-lines-width;
    background-position: top;
 
    .content {
@@ -285,16 +296,19 @@ header {
 
          .header-wrap {
             h2 {
-               font-size: 2.95rem;
+               font-size: $header-l;
                line-height: 4rem;
                margin: 0;
+               font-family: "Cocogoose";
+               font-weight: 100;
             }
 
             p {
                color: #fff;
                line-height: 2rem;
-               margin: 3.375rem 0;
-               max-width: 600px;
+               margin: 1.5rem 0 2.3rem;
+               max-width: 640px;
+               font-size: $text-s;
             }
          }
 
@@ -302,16 +316,28 @@ header {
             display: flex;
             flex-direction: column;
             row-gap: 0.687rem;
+            width: 83%;
 
             .form-element {
-               padding: 1.2em 4em;
+               padding: 1em 4em;
                border-radius: 25px;
                border: 0;
-               font-family: CocogooseLight;
+               font-family: "CocogooseLight";
+               background-color: #dcfffa;
             }
 
             textarea.form-element {
-               min-height: 186px;
+               min-height: 150px;
+               resize: vertical;
+            }
+
+            .btn-wrap {
+               margin-top: 2.5rem;
+
+               .purple-btn {
+                  font-family: "CocogooseLight";
+                  border: 0;
+               }
             }
          }
       }
@@ -319,74 +345,85 @@ header {
       .img-wrap {
          width: calc(100% - 788px);
          display: flex;
-         justify-content: end;
          align-items: end;
 
          .spaceship {
-            max-width: 317px;
+            max-width: 260px;
+            margin-bottom: 5.25rem;
          }
       }
    }
 }
 
-@media (max-width: 999px) {
-   .content .logo-wrap img.circle {
-      top: -520px;
+@media (max-width: 1024px) {
+   .content {
+      padding: 0 3rem;
    }
 
-   .content-2 .content {
-      h2 {
-         line-height: 4rem;
-         font-size: 2.75rem;
+   .content-3 .content {
+      .service-text {
+         width: 30%;
       }
 
-      p.description {
-         font-size: 1.1rem;
-         line-height: 2rem;
-      }
-   }
-
-   .content-3 {
-      .content {
-         flex-wrap: wrap;
-
-         .service-text {
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-
-            h3.main::after,
-            h3.lower:nth-of-type(3)::before,
-            h3.lower:nth-of-type(3)::after {
-               height: 100px;
-               left: 6rem;
-            }
-         }
-
-         .service-list {
-            width: 100%;
-            padding-top: 3.25rem;
-            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-            gap: 2rem;
-         }
-
-         .service-list::before {
-            content: none;
-         }
+      .service-list {
+         width: 70%;
+         column-gap: 1.5rem;
       }
    }
 }
 
-@media (max-width: 749px) {
-   .content .logo-wrap img.circle {
-      top: -370px;
-   }
-}
+@media (max-width: 768px) {
+   .content {
+      .logo-wrap img.circle {
+         top: -27rem;
+      }
 
-@media (max-width: 599px) {
-   .content .logo-wrap img.circle {
-      top: -220px;
+      .text-wrap {
+         .innovate-text {
+            max-width: 550px;
+         }
+
+         .lower-text-wrap p.contact-text {
+            font-size: 1rem;
+         }
+      }
+   }
+
+   .content-2 .content p.description {
+      font-size: 1rem;
+   }
+
+   .content-3 .content {
+      flex-wrap: wrap;
+
+      .service-text {
+         width: 100%;
+         display: flex;
+         flex-direction: column;
+         align-items: center;
+
+         h3.main::after {
+            left: 5rem;
+         }
+
+         h3.lower:nth-of-type(3)::before,
+         h3.lower:nth-of-type(3)::after {
+            left: 6rem;
+         }
+      }
+
+      .service-list::before {
+         content: none;
+      }
+
+      .service-list {
+         width: 100%;
+         padding-top: 3rem;
+      }
+   }
+
+   .content-4 .content p.text {
+      font-size: 1rem;
    }
 }
 
