--- a/style.css
+++ b/style.css
@@ -6,23 +6,23 @@
 
 @font-face {
   font-family: LemonMilkLight;
-  src: url("/fonts/LEMONMILK-Light.otf") format("opentype");
+  src: url("./fonts/LEMONMILK-Light.otf") format("opentype");
 }
 @font-face {
   font-family: LemonMilk;
-  src: url("/fonts/LEMONMILK-Regular.otf") format("opentype");
+  src: url("./fonts/LEMONMILK-Regular.otf") format("opentype");
 }
 @font-face {
   font-family: LemonMilkMedium;
-  src: url("/fonts/LEMONMILK-Medium.otf") format("opentype");
+  src: url("./fonts/LEMONMILK-Medium.otf") format("opentype");
 }
 @font-face {
   font-family: Cocogoose;
-  src: url("/fonts/Cocogoose-Pro-Regular-trial.ttf") format("truetype");
+  src: url("./fonts/Cocogoose-Pro-Regular-trial.ttf") format("truetype");
 }
 @font-face {
   font-family: CocogooseLight;
-  src: url("/fonts/Cocogoose-Pro-Ultralight-trial.ttf") format("truetype");
+  src: url("./fonts/Cocogoose-Pro-Ultralight-trial.ttf") format("truetype");
 }
 .purple-btn {
   color: #fff;
@@ -96,7 +96,7 @@ header .content {
   row-gap: 40px;
   padding: 25rem 0 8.5rem;
   position: relative;
-  background-image: url(/assets/line-1.svg);
+  background-image: url(./assets/line-1.svg);
   background-repeat: no-repeat;
   background-size: 1690px;
   background-position: bottom;
@@ -201,7 +201,7 @@ header .content {
 
 .content-4 {
   padding-top: 15rem;
-  background-image: url(/assets/line-2.svg);
+  background-image: url(./assets/line-2.svg);
   background-repeat: no-repeat;
   background-size: 1690px;
   background-position: top;
@@ -241,7 +241,7 @@ header .content {
 
 .content-5 {
   padding-top: 29rem;
-  background-image: url(/assets/line-3.svg);
+  background-image: url(./assets/line-3.svg);
   background-repeat: no-repeat;
   background-size: 1690px;
   background-position: top;
