--- a/style.scss
+++ b/style.scss
@@ -6,27 +6,27 @@
 
 @font-face {
    font-family: LemonMilkLight;
-   src: url("/fonts/LEMONMILK-Light.otf") format("opentype");
+   src: url("./fonts/LEMONMILK-Light.otf") format("opentype");
 }
 
 @font-face {
    font-family: LemonMilk;
-   src: url("/fonts/LEMONMILK-Regular.otf") format("opentype");
+   src: url("./fonts/LEMONMILK-Regular.otf") format("opentype");
 }
 
 @font-face {
    font-family: LemonMilkMedium;
-   src: url("/fonts/LEMONMILK-Medium.otf") format("opentype");
+   src: url("./fonts/LEMONMILK-Medium.otf") format("opentype");
 }
 
 @font-face {
    font-family: Cocogoose;
-   src: url("/fonts/Cocogoose-Pro-Regular-trial.ttf") format("truetype");
+   src: url("./fonts/Cocogoose-Pro-Regular-trial.ttf") format("truetype");
 }
 
 @font-face {
    font-family: CocogooseLight;
-   src: url("/fonts/Cocogoose-Pro-Ultralight-trial.ttf") format("truetype");
+   src: url("./fonts/Cocogoose-Pro-Ultralight-trial.ttf") format("truetype");
 }
 
 $background-lines-width: 1690px;
@@ -119,7 +119,7 @@ header {
    row-gap: 40px;
    padding: 25rem 0 8.5rem;
    position: relative;
-   background-image: url(/assets/line-1.svg);
+   background-image: url(./assets/line-1.svg);
    background-repeat: no-repeat;
    background-size: $background-lines-width;
    background-position: bottom;
@@ -238,7 +238,7 @@ header {
 
 .content-4 {
    padding-top: 15rem;
-   background-image: url(/assets/line-2.svg);
+   background-image: url(./assets/line-2.svg);
    background-repeat: no-repeat;
    background-size: $background-lines-width;
    background-position: top;
@@ -283,7 +283,7 @@ header {
 
 .content-5 {
    padding-top: 29rem;
-   background-image: url(/assets/line-3.svg);
+   background-image: url(./assets/line-3.svg);
    background-repeat: no-repeat;
    background-size: $background-lines-width;
    background-position: top;
